workloads/json-client.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: json-client
  namespace: srcns
  labels:
    app: json-client
    service: json-client
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: json-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: json-client
  namespace: srcns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: json-client
  template:
    metadata:
      labels:
        app: json-client
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: json-client
      containers:
      - name: json-client
        image: boeboe/json-client
        imagePullPolicy: IfNotPresent
