workloads/json-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: json-server
  namespace: dstns
  labels:
    app: json-server
    service: json-server
spec:
  ports:
  - name: http-json-server
    port: 9999
    targetPort: json-server
  selector:
    app: json-server
